<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                tools:context="com.wonders.xlab.pedometer.ui.PMHomeActivity">

    <com.wonders.xlab.pedometer.widget.XTopBarLayout
        android:id="@+id/xtbl"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:xtblShowNavigation="true"
        app:xtblTitleGravity="center"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/xtbl"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="36dp"/>

    <com.wonders.xlab.pedometer.widget.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
