<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.wonders.xlab.pedometer.ui.daily.PMDailyFragment">

    <com.wonders.xlab.pedometer.widget.PMDailyRingChart
        android:id="@+id/walkChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消耗大卡"
                android:textColor="@color/textBlack"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textColor="#328de8"
                android:textSize="22sp"/>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:background="@color/divider"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="行走公里"
                android:textColor="@color/textBlack"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0公里"
                android:textColor="#328de8"
                android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>

    <com.wonders.xlab.pedometer.widget.PMDailyBarChart
        android:id="@+id/barChartDaily"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"/>

</LinearLayout>

