<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:theme="@style/ToolBar"
    app:background="@color/pmTopBarBackground"
    app:popupTheme="@style/AppTheme.PopupOverlay">


</android.support.v7.widget.Toolbar>
